--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         /* Header Section */
         header {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/api/placeholder/1200/600?text=Mayapur+Temple+of+Vedic+Planetarium') center/cover no-repeat;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('tovp_drawing_slide-lg.jpg.webp') center/cover no-repeat;
             color: white;
             text-align: center;
             padding: 180px 0;
