--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         /* Itinerary Section */
         .itinerary-section {
             padding: 80px 0;
-            background: url('/api/placeholder/1200/300?text=Mayapur+Skyline') center bottom/contain no-repeat;
+            background: url('sp_vyasasana_final_front.jpg') center bottom/contain no-repeat;
             padding-bottom: 250px;
         }
         
